# awsts

./: Cargo.toml  README.md
src/: aws_sts.rs  config.rs  error.rs  main.rs
