[package]
name = "awsts"
version = "0.1.0"
authors = ["David Bruce <djb@ragnarok.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
structopt = "0.3.12"
rusoto_core = "0.43"
rusoto_sts = "0.43"
futures = "0.3"
tokio = "0.2"
dirs = "2.0"
chrono = "0.4"